--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.11.0
+  firebase_analytics: ^9.0.5
+  firebase_crashlytics: ^2.4.5
+  firebase_messaging: ^11.2.5
 
 dev_dependencies:
   flutter_test:
