News, Help & Impressum  done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_crashlytics: ^2.4.5
   firebase_messaging: ^11.2.5
   cloud_firestore: ^3.1.6
+  flutter_html: ^2.2.1
 
 dev_dependencies:
   flutter_test:
