--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_messaging: ^11.2.5
   cloud_firestore: ^3.1.6
   flutter_html: ^2.2.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
