--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_firestore: ^3.1.6
   flutter_html: ^2.2.1
   http: ^0.13.4
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
